Fix nav spacing on admin

--- a/app/javascript/styles/ChannelListHeader.scss
+++ b/app/javascript/styles/ChannelListHeader.scss
@@ -3,6 +3,7 @@
 
 .container {
   h3 {
+    margin-right: 1rem;
     margin-bottom: .5rem;
     margin-left: 1rem;
     color: rgba($gray-lighter, .5);
